// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots InfiniteLoader basic list 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1 MuiGrid-spacing-xs-24-24"
    >
      <div
        className="MuiGrid-item-2 MuiGrid-grid-xs-12-39"
      >
        <div
          className="MuiPaper-root-92 MuiPaper-elevation2-96 MuiPaper-rounded-93"
        >
          <div
            className="MuiList-root-119 MuiList-padding-120"
          >
            <div
              className={undefined}
              style={
                Object {
                  "overflow": "visible",
                  "width": 0,
                }
              }
            >
              <div
                style={
                  Object {
                    "height": 400,
                    "overflow": "hidden",
                    "position": "relative",
                    "width": 0,
                  }
                }
              >
                <div
                  style={
                    Object {
                      "WebkitOverflowScrolling": "touch",
                      "bottom": 0,
                      "left": 0,
                      "marginBottom": 0,
                      "marginRight": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                >
                  <div
                    aria-label="grid"
                    aria-readonly={true}
                    className="ReactVirtualized__Grid ReactVirtualized__List"
                    id={undefined}
                    onScroll={[Function]}
                    role="grid"
                    style={
                      Object {
                        "WebkitOverflowScrolling": "touch",
                        "boxSizing": "border-box",
                        "direction": "ltr",
                        "height": 400,
                        "overflowX": false,
                        "overflowY": false,
                        "position": "relative",
                        "width": 0,
                        "willChange": "transform",
                      }
                    }
                    tabIndex={0}
                  />
                </div>
                <div
                  style={
                    Object {
                      "borderRadius": 3,
                      "bottom": 2,
                      "display": "none",
                      "height": 6,
                      "left": 2,
                      "opacity": 0,
                      "position": "absolute",
                      "right": 2,
                      "transition": "opacity 200ms",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": "rgba(0,0,0,.2)",
                        "borderRadius": "inherit",
                        "cursor": "pointer",
                        "display": "block",
                        "height": "100%",
                        "position": "relative",
                      }
                    }
                  />
                </div>
                <div
                  style={
                    Object {
                      "borderRadius": 3,
                      "bottom": 2,
                      "display": "none",
                      "opacity": 0,
                      "position": "absolute",
                      "right": 2,
                      "top": 2,
                      "transition": "opacity 200ms",
                      "width": 6,
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": "rgba(0,0,0,.2)",
                        "borderRadius": "inherit",
                        "cursor": "pointer",
                        "display": "block",
                        "position": "relative",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots InfiniteLoader basic table 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-123 MuiGrid-spacing-xs-24-146"
    >
      <div
        className="MuiGrid-item-124 MuiGrid-grid-xs-12-161"
      >
        <div
          className="MuiPaper-root-214 MuiPaper-elevation2-218 MuiPaper-rounded-215"
        >
          <div
            className="MuiTable-root-241"
          >
            <div
              className="MuiTableHead-root-243 Component-root-242"
            >
              <div
                className="MuiTableRow-root-249 Component-root-244 MuiTableRow-head-252 Component-head-247"
              >
                <div
                  aria-sort={null}
                  className="MuiTableCell-root-262 InnerTableCell-root-254 MuiTableCell-head-263 InnerTableCell-head-255"
                  scope="col"
                >
                  Index
                </div>
                <div
                  aria-sort={null}
                  className="MuiTableCell-root-262 InnerTableCell-root-254 MuiTableCell-head-263 InnerTableCell-head-255"
                  scope="col"
                >
                  Title
                </div>
                <div
                  aria-sort={null}
                  className="MuiTableCell-root-262 InnerTableCell-root-254 MuiTableCell-head-263 InnerTableCell-head-255"
                  scope="col"
                >
                  Timestamp
                </div>
              </div>
            </div>
            <div
              className={undefined}
              style={
                Object {
                  "overflow": "visible",
                  "width": 0,
                }
              }
            >
              <div
                style={
                  Object {
                    "height": 400,
                    "overflow": "hidden",
                    "position": "relative",
                    "width": 0,
                  }
                }
              >
                <div
                  style={
                    Object {
                      "WebkitOverflowScrolling": "touch",
                      "bottom": 0,
                      "left": 0,
                      "marginBottom": 0,
                      "marginRight": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                >
                  <div
                    aria-label="grid"
                    aria-readonly={true}
                    className="ReactVirtualized__Grid ReactVirtualized__List InnerTableBody-root-270"
                    id={undefined}
                    onScroll={[Function]}
                    role="grid"
                    style={
                      Object {
                        "WebkitOverflowScrolling": "touch",
                        "boxSizing": "border-box",
                        "direction": "ltr",
                        "height": 400,
                        "overflowX": false,
                        "overflowY": false,
                        "position": "relative",
                        "width": 0,
                        "willChange": "transform",
                      }
                    }
                    tabIndex={0}
                  />
                </div>
                <div
                  style={
                    Object {
                      "borderRadius": 3,
                      "bottom": 2,
                      "display": "none",
                      "height": 6,
                      "left": 2,
                      "opacity": 0,
                      "position": "absolute",
                      "right": 2,
                      "transition": "opacity 200ms",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": "rgba(0,0,0,.2)",
                        "borderRadius": "inherit",
                        "cursor": "pointer",
                        "display": "block",
                        "height": "100%",
                        "position": "relative",
                      }
                    }
                  />
                </div>
                <div
                  style={
                    Object {
                      "borderRadius": 3,
                      "bottom": 2,
                      "display": "none",
                      "opacity": 0,
                      "position": "absolute",
                      "right": 2,
                      "top": 2,
                      "transition": "opacity 200ms",
                      "width": 6,
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": "rgba(0,0,0,.2)",
                        "borderRadius": "inherit",
                        "cursor": "pointer",
                        "display": "block",
                        "position": "relative",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/SideMenu basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-271 MuiGrid-spacing-xs-24-294"
    >
      <div
        className="MuiDrawer-docked-362"
      >
        <div
          className="MuiPaper-root-373 MuiPaper-elevation0-375 MuiDrawer-paper-363 MuiDrawer-paperAnchorLeft-364 MuiDrawer-paperAnchorDockedLeft-368"
          direction="right"
          style={Object {}}
        >
          <nav
            className="MuiList-root-410 MuiList-padding-411 SideMenu-root-401 Component-flexed-400"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "width": 250,
              }
            }
          >
            <div
              className="SideMenu-topSpacer-402"
            />
            <div
              className="MuiButtonBase-root-424 MuiListItem-root-414 MuiListItem-default-417 MuiListItem-gutters-421 SideMenu-listItemGutters-404 MuiListItem-button-422 SideMenu-listItem-403"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-428 MuiListItemIcon-root-427"
                color={undefined}
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-434 SideMenu-listItemText-406"
              >
                <span
                  className="MuiTypography-root-440 MuiTypography-subheading-447 MuiListItemText-primary-437 SideMenu-listItemPrimary-405"
                >
                  Dashboard
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-464"
              />
            </div>
            <div
              className="MuiButtonBase-root-424 MuiListItem-root-414 MuiListItem-default-417 MuiListItem-gutters-421 SideMenu-listItemGutters-404 MuiListItem-button-422 SideMenu-listItem-403"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-428 MuiListItemIcon-root-427"
                color={undefined}
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-434 SideMenu-listItemText-406"
              >
                <span
                  className="MuiTypography-root-440 MuiTypography-subheading-447 MuiListItemText-primary-437 SideMenu-listItemPrimary-405"
                >
                  Employees
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-464"
              />
            </div>
            <div
              className="MuiButtonBase-root-424 MuiListItem-root-414 MuiListItem-default-417 MuiListItem-gutters-421 SideMenu-listItemGutters-404 MuiListItem-button-422 SideMenu-listItem-403"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-428 MuiListItemIcon-root-427"
                color={undefined}
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-434 SideMenu-listItemText-406"
              >
                <span
                  className="MuiTypography-root-440 MuiTypography-subheading-447 MuiListItemText-primary-437 SideMenu-listItemPrimary-405"
                >
                  Theme
                </span>
              </div>
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-428"
                color={undefined}
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </g>
              </svg>
              <span
                className="MuiTouchRipple-root-464"
              />
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/SideMenu mini selected 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-679 MuiGrid-spacing-xs-24-702"
    >
      <div
        className="MuiDrawer-docked-770"
      >
        <div
          className="MuiPaper-root-781 MuiPaper-elevation0-783 MuiDrawer-paper-771 MuiDrawer-paperAnchorLeft-772 MuiDrawer-paperAnchorDockedLeft-776"
          direction="right"
          style={Object {}}
        >
          <nav
            className="MuiList-root-818 MuiList-padding-819 SideMenu-root-809 Component-flexed-808"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "width": 80,
              }
            }
          >
            <div
              className="SideMenu-topSpacer-810"
            />
            <div
              className="MuiButtonBase-root-832 MuiListItem-root-822 MuiListItem-default-825 MuiListItem-gutters-829 SideMenu-listItemGutters-812 MuiListItem-button-830 SideMenu-activeItem-817"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-836 MuiListItemIcon-root-835"
                color={undefined}
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-842 SideMenu-listItemText-814 SideMenu-listItemHidden-815"
              >
                <span
                  className="MuiTypography-root-848 MuiTypography-subheading-855 MuiListItemText-primary-845 SideMenu-listItemPrimary-813"
                >
                  Dashboard
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-872"
              />
            </div>
            <div
              className="MuiButtonBase-root-832 MuiListItem-root-822 MuiListItem-default-825 MuiListItem-gutters-829 SideMenu-listItemGutters-812 MuiListItem-button-830 SideMenu-listItem-811"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-836 MuiListItemIcon-root-835"
                color={undefined}
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-842 SideMenu-listItemText-814 SideMenu-listItemHidden-815"
              >
                <span
                  className="MuiTypography-root-848 MuiTypography-subheading-855 MuiListItemText-primary-845 SideMenu-listItemPrimary-813"
                >
                  Employees
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-872"
              />
            </div>
            <div
              className="MuiButtonBase-root-832 MuiListItem-root-822 MuiListItem-default-825 MuiListItem-gutters-829 SideMenu-listItemGutters-812 MuiListItem-button-830 SideMenu-listItem-811"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-836 MuiListItemIcon-root-835"
                color={undefined}
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-842 SideMenu-listItemText-814 SideMenu-listItemHidden-815"
              >
                <span
                  className="MuiTypography-root-848 MuiTypography-subheading-855 MuiListItemText-primary-845 SideMenu-listItemPrimary-813"
                >
                  Theme
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-872"
              />
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/SideMenu selected 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-475 MuiGrid-spacing-xs-24-498"
    >
      <div
        className="MuiDrawer-docked-566"
      >
        <div
          className="MuiPaper-root-577 MuiPaper-elevation0-579 MuiDrawer-paper-567 MuiDrawer-paperAnchorLeft-568 MuiDrawer-paperAnchorDockedLeft-572"
          direction="right"
          style={Object {}}
        >
          <nav
            className="MuiList-root-614 MuiList-padding-615 SideMenu-root-605 Component-flexed-604"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "width": 250,
              }
            }
          >
            <div
              className="SideMenu-topSpacer-606"
            />
            <div
              className="MuiButtonBase-root-628 MuiListItem-root-618 MuiListItem-default-621 MuiListItem-gutters-625 SideMenu-listItemGutters-608 MuiListItem-button-626 SideMenu-activeItem-613"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-632 MuiListItemIcon-root-631"
                color={undefined}
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-638 SideMenu-listItemText-610"
              >
                <span
                  className="MuiTypography-root-644 MuiTypography-subheading-651 MuiListItemText-primary-641 SideMenu-listItemPrimary-609"
                >
                  Dashboard
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-668"
              />
            </div>
            <div
              className="MuiButtonBase-root-628 MuiListItem-root-618 MuiListItem-default-621 MuiListItem-gutters-625 SideMenu-listItemGutters-608 MuiListItem-button-626 SideMenu-listItem-607"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-632 MuiListItemIcon-root-631"
                color={undefined}
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-638 SideMenu-listItemText-610"
              >
                <span
                  className="MuiTypography-root-644 MuiTypography-subheading-651 MuiListItemText-primary-641 SideMenu-listItemPrimary-609"
                >
                  Employees
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-668"
              />
            </div>
            <div
              className="MuiButtonBase-root-628 MuiListItem-root-618 MuiListItem-default-621 MuiListItem-gutters-625 SideMenu-listItemGutters-608 MuiListItem-button-626 SideMenu-listItem-607"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-632 MuiListItemIcon-root-631"
                color={undefined}
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-638 SideMenu-listItemText-610"
              >
                <span
                  className="MuiTypography-root-644 MuiTypography-subheading-651 MuiListItemText-primary-641 SideMenu-listItemPrimary-609"
                >
                  Theme
                </span>
              </div>
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-632"
                color={undefined}
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </g>
              </svg>
              <span
                className="MuiTouchRipple-root-668"
              />
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1326 MuiGrid-spacing-xs-24-1349"
    >
      <div
        className="MuiGrid-item-1327 MuiGrid-grid-xs-12-1364"
      >
        <div
          className="MuiPaper-root-1422 MuiPaper-elevation2-1426 MuiPaper-rounded-1423 Widget-root-1417"
        >
          <h2
            className="MuiTypography-root-1449 MuiTypography-title-1455 MuiTypography-colorInherit-1468 MuiTypography-gutterBottom-1466"
          >
            Title
          </h2>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) featured 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1473 MuiGrid-spacing-xs-24-1496"
    >
      <div
        className="MuiGrid-item-1474 MuiGrid-grid-xs-12-1511"
      >
        <div
          className="MuiPaper-root-1569 MuiPaper-elevation2-1573 MuiPaper-rounded-1570 Widget-root-1564 Widget-featured-1568"
        >
          <h2
            className="MuiTypography-root-1596 MuiTypography-title-1602 MuiTypography-colorInherit-1615 MuiTypography-gutterBottom-1613"
          >
            Title
          </h2>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) with borders 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1620 MuiGrid-spacing-xs-24-1643"
    >
      <div
        className="MuiGrid-item-1621 MuiGrid-grid-xs-12-1658"
      >
        <div
          className="MuiGrid-container-1620 MuiGrid-spacing-xs-24-1643"
        >
          <div
            className="MuiGrid-item-1621 MuiGrid-grid-xs-6-1652"
          >
            <div
              className="MuiPaper-root-1718 MuiPaper-elevation2-1722 MuiPaper-rounded-1719 Widget-root-1713 Widget-border-1714 Widget-border-top-1715"
            >
              <h2
                className="MuiTypography-root-1745 MuiTypography-title-1751 MuiTypography-colorInherit-1764 MuiTypography-gutterBottom-1762"
              >
                Border top
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-1621 MuiGrid-grid-xs-6-1652"
          >
            <div
              className="MuiPaper-root-1718 MuiPaper-elevation2-1722 MuiPaper-rounded-1719 Widget-root-1713 Widget-border-1714 Widget-border-bottom-1716"
            >
              <h2
                className="MuiTypography-root-1745 MuiTypography-title-1751 MuiTypography-colorInherit-1764 MuiTypography-gutterBottom-1762"
              >
                Border bottom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-1621 MuiGrid-grid-xs-6-1652"
          >
            <div
              className="MuiPaper-root-1718 MuiPaper-elevation2-1722 MuiPaper-rounded-1719 Widget-root-1713 Widget-border-1714 Component-customTopBorder-1711 Widget-border-top-1715"
            >
              <h2
                className="MuiTypography-root-1745 MuiTypography-title-1751 MuiTypography-colorInherit-1764 MuiTypography-gutterBottom-1762"
              >
                Border top custom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-1621 MuiGrid-grid-xs-6-1652"
          >
            <div
              className="MuiPaper-root-1718 MuiPaper-elevation2-1722 MuiPaper-rounded-1719 Widget-root-1713 Widget-border-1714 Component-customBotomBorder-1712 Widget-border-bottom-1716"
            >
              <h2
                className="MuiTypography-root-1745 MuiTypography-title-1751 MuiTypography-colorInherit-1764 MuiTypography-gutterBottom-1762"
              >
                Border bottom custom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-883 MuiGrid-spacing-xs-24-906"
    >
      <div
        className="MuiGrid-item-884 MuiGrid-grid-xs-12-921"
      >
        <div
          className="MuiPaper-root-979 MuiPaper-elevation2-983 MuiPaper-rounded-980 Widget-root-974"
        >
          <h2
            className="MuiTypography-root-1006 MuiTypography-title-1012 MuiTypography-colorInherit-1025 MuiTypography-gutterBottom-1023"
          >
            Title
          </h2>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget featured 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1030 MuiGrid-spacing-xs-24-1053"
    >
      <div
        className="MuiGrid-item-1031 MuiGrid-grid-xs-12-1068"
      >
        <div
          className="MuiPaper-root-1126 MuiPaper-elevation2-1130 MuiPaper-rounded-1127 Widget-root-1121 Widget-featured-1125"
        >
          <h2
            className="MuiTypography-root-1153 MuiTypography-title-1159 MuiTypography-colorInherit-1172 MuiTypography-gutterBottom-1170"
          >
            Title
          </h2>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget with borders 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1177 MuiGrid-spacing-xs-24-1200"
    >
      <div
        className="MuiGrid-item-1178 MuiGrid-grid-xs-12-1215"
      >
        <div
          className="MuiGrid-container-1177 MuiGrid-spacing-xs-24-1200"
        >
          <div
            className="MuiGrid-item-1178 MuiGrid-grid-xs-6-1209"
          >
            <div
              className="MuiPaper-root-1275 MuiPaper-elevation2-1279 MuiPaper-rounded-1276 Widget-root-1270 Widget-border-1271 Widget-border-top-1272"
            >
              <h2
                className="MuiTypography-root-1302 MuiTypography-title-1308 MuiTypography-colorInherit-1321 MuiTypography-gutterBottom-1319"
              >
                Border top
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-1178 MuiGrid-grid-xs-6-1209"
          >
            <div
              className="MuiPaper-root-1275 MuiPaper-elevation2-1279 MuiPaper-rounded-1276 Widget-root-1270 Widget-border-1271 Widget-border-bottom-1273"
            >
              <h2
                className="MuiTypography-root-1302 MuiTypography-title-1308 MuiTypography-colorInherit-1321 MuiTypography-gutterBottom-1319"
              >
                Border bottom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-1178 MuiGrid-grid-xs-6-1209"
          >
            <div
              className="MuiPaper-root-1275 MuiPaper-elevation2-1279 MuiPaper-rounded-1276 Widget-root-1270 Widget-border-1271 Component-customTopBorder-1268 Widget-border-top-1272"
            >
              <h2
                className="MuiTypography-root-1302 MuiTypography-title-1308 MuiTypography-colorInherit-1321 MuiTypography-gutterBottom-1319"
              >
                Border top custom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-1178 MuiGrid-grid-xs-6-1209"
          >
            <div
              className="MuiPaper-root-1275 MuiPaper-elevation2-1279 MuiPaper-rounded-1276 Widget-root-1270 Widget-border-1271 Component-customBotomBorder-1269 Widget-border-bottom-1273"
            >
              <h2
                className="MuiTypography-root-1302 MuiTypography-title-1308 MuiTypography-colorInherit-1321 MuiTypography-gutterBottom-1319"
              >
                Border bottom custom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
